# libquicr

./: .gitmodules  CMakeLists.txt
cmd/really/: really.cpp
dependencies/: CMakeLists.txt
include/quicr/: track_name.h
include/quicr/detail/: messages.h  serializer.h  stream_buffer.h
mlstest/: ARCHITECTURE.md  CMakeLists.txt  Makefile  QuicrMessageProxy.h  TODO.md  async_queue.h  channel.h  channel_test.cpp  counter.cpp  counter.h  counter_test.cpp  delivery.cpp  delivery.h  epoch_server.cpp  epoch_server.h  epoch_server_test.cpp  epoch_sync.cpp  epoch_sync.h  epoch_sync_test.cpp  fake_config.h  lock.cpp  lock.h  lock_test.cpp  logger.cpp  logger.h  main.cpp  mls_client.cpp  mls_client.h  mls_client_test.cpp  mls_session.cpp  mls_session.h  mls_user_session.cpp  mls_user_session.h  namespace_config.cpp  namespace_config.h  namespace_config_test.cpp  null_delegate.h  pub_delegate.cpp  pub_delegate.h  quicr_client_helper.cpp  (+7 more)
src/: CMakeLists.txt  messages.cpp  quicr_client_raw_session.cpp  quicr_server_raw_session.cpp  transport.cpp
test/: moq_messages.cpp
